# tenets

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tenets.example.yml  CHANGELOG.md  CNAME  MAKEFILE  README.md  SECURITY.md  codecov.yml  conftest.py  llms.txt  mkdocs.dev.yml  mkdocs.yml  pyproject.toml  pytest.ini  pytest_py312.ini
.github/: AGENTS.md  VERSIONING.md  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  ci.yml  docs.yml  manual-version-bump.yml  release-drafter.yml  release.yml  release.yml.bak  version-bump-push.yml  version-bump.yml
dev/: 404.html  gen_api.py  gen_api_optimized.py  gen_ref_pages.py  index.html  objects.inv  robots.txt  sitemap.xml
dev/ARCHITECTURE/: index.html
dev/BRANDING/: index.html
dev/CLI/: index.html
dev/CODE_OF_CONDUCT/: index.html
dev/CONFIG/: index.html
dev/CONTRIBUTING/: index.html
dev/DEPLOYMENT/: index.html
dev/DEVELOPMENT/: index.html
dev/MCP/: index.html
dev/SECURITY/: index.html
dev/TESTING/: index.html
dev/VIZ_CHEATSHEET/: index.html
dev/about/: index.html
dev/api/: index.html
dev/api/SUMMARY/: index.html
dev/api/cli/: index.html
dev/api/config/: index.html
dev/api/core/: index.html
dev/api/models/: index.html
dev/api/storage/: index.html
dev/api/tenets/: index.html
dev/api/utils/: index.html
dev/api/viz/: index.html
dev/architecture/: index.html
dev/architecture/cli-api/: index.html
dev/architecture/code-analysis/: index.html
dev/architecture/configuration/: index.html
dev/architecture/context-management/: index.html
dev/architecture/core-architecture/: index.html
dev/architecture/core_systems/: index.html
dev/best-practices/: index.html
dev/best_practices/: index.html
dev/blog/: index.html
dev/claude-mcp/: index.html
dev/config/: index.html
dev/cursor-mcp/: index.html
dev/docs/: index.html
dev/enterprise/: index.html
dev/examples/: index.html
dev/faq/: index.html
dev/favicon/: site.webmanifest
dev/installation/: index.html
dev/js/: architecture-lazy-load.js  github-stats.js  lantern.js  main.js  mobile-menu.js  see-it-in-action.js
dev/overrides/: home.html  main.html
dev/privacy/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
dev/styles/: api-performance.css  cards.css  header.css  hero.css  main.css  mobile.css  overrides.css  search.css  terminal.css  variables.css  victorian.css
dev/supported-languages/: index.html
dev/supported_languages/: index.html
dev/terms/: index.html
dev/tutorial/: index.html
dev/vscode-setup/: index.html
docs/: ARCHITECTURE.md  BRANDING.md  CLI.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  DEEP-DIVE.md  DEPLOYMENT.md  DEVELOPMENT.md  MCP.md  SECURITY.md  TESTING.md  VIZ_CHEATSHEET.md  about.md  api.md  best-practices.md  best_practices.md  claude-mcp.md  config.md  cursor-mcp.md  docs.md  enterprise.md  examples.md  faq.md  features.md  first-steps.md  gen_api.py  gen_api_optimized.py  gen_ref_pages.py  index.md  installation.md  llms-full.txt  llms.txt  mcp-submission.md  privacy.md  quickstart.md  robots.txt  supported_languages.md  terms.md  tutorial.md  (+1 more)
docs/api/: SUMMARY.md  index.md
docs/architecture/: cli-api.md  code-analysis.md  configuration.md  context-management.md  core-architecture.md  core_systems.md  data_storage.md  file-scanning.md  git-integration.md  guiding-principles.md  index.md  integration.md  mcp-integration-plan.md  nlp-pipeline.md  output-visualization.md  overview.md  performance.md  ranking-system.md  roadmap.md  security.md  session-management.md  storage-caching.md  system-overview.md  testing.md
docs/blog/: cursor-claude-setup.md  index.md  mcp-explained.md  why-context-matters.md
docs/favicon/: site.webmanifest
docs/includes/: abbreviations.md
docs/js/: api-lazy-load.js  architecture-diagram.js  back-to-top.js  copy-buttons.js  github-stats.js  image-modal.js  install-tabs.js  lantern.js  main-backup.js  main-simple.js  main.js  mobile-menu.js  mobile-search-drawer.js  nav-injection.js  page-flags.js  search-enhancements.js  search-fix.js  search-open-fallback.js  see-it-in-action.js  terminal.js  theme-toggle.js  typewriter.js
docs/overrides/: home.html  main.html
docs/styles/: accessibility.css  animations.css  architecture.css  back-to-top.css  buttons.css  cards.css  footer.css  header-fixed.css  header.css  hero.css  image-modal.css  logo-fix.css  main.css  mobile.css  nav-fix.css  nav-fixes.css  neumorphic.css  overrides.css  search.css  see-it-in-action.css  terminal.css  toast.css  variables.css  victorian.css
tenets/: __init__.py  config.py
tenets/cli/: app.py
tenets/core/: __init__.py  project_detector.py
tenets/data/: __init__.py
tenets/mcp/: __init__.py  server.py  watchdog.py
tenets/models/: __init__.py  analysis.py  context.py  llm.py  summary.py  tenet.py
tenets/storage/: __init__.py  cache.py  session_db.py  sqlite.py
tenets/utils/: __init__.py  external_sources.py  logger.py  multiprocessing.py  scanner.py  timing.py  tokens.py
tenets/viz/: __init__.py  _init_.py  base.py  complexity.py  contributors.py  coupling.py  dependencies.py  displays.py  graph_generator.py  hotspots.py
tests/: conftest.py  test_config.py  test_tenets.py
tests/cli/: test_app.py  test_index_command.py
tests/core/: test_project_detector.py
tests/mcp/: __init__.py  test_cli_entrypoint.py  test_lazy_loading.py  test_project_root.py  test_server.py  test_watchdog.py
tests/storage/: test_cache.py  test_session_db.py  test_sqlite.py
tests/utils/: test_cache.py  test_external_sources.py  test_logger.py  test_logging_config.py  test_scanner.py  test_timing.py  test_tokens.py
tests/viz/: test_base.py  test_complexity.py  test_contributors.py  test_graph_generator.py  test_viz.py
vscode-extension/: .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  serverManager.ts
(+588 files in other folders)
